--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/ico" sizes="32x32" href="./images/favicon-32x32.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.ico">
     <link rel="stylesheet" href="/style/styles.css">
     <title>Landing page | Loopstudios</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,21 +23,23 @@
                 <ul id="wrapper_navbar"></ul>
             </nav>
         </div>
-        <h1 class="hero__mens--title">Immersive experiences that deliver</h1>
+        <div class="hero__container">
+            <h1 class="hero__mens--title">Immersive experiences that deliver</h1>
+        </div>
     </header>
     <main class="principal">
         <article class="article">
+            <img src="../assets/desktop/image-interactive.jpg" alt="" class="interactive__img">
             <div class="interactive">
-                <h1 class="interactive__title">The leader in interactive VR</h1>
+                <h2 class="interactive__title">The leader in interactive VR</h2>
                 <p class="interactive__copy">Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to their
                     brand.
                 </p>
             </div>
-            <img src="../assets/desktop/image-interactive.jpg" alt="" class="interactive__img">
         </article>
         <section class="gallery">
             <div class="gallery__head">
-                <h class="gallery__title">OUR CREATIONS</h>
+                <h2 class="gallery__title">OUR CREATIONS</h2>
                 <a href="#" class="gallery__seeall">SEE ALL</a>
             </div>
         </section>
